# mistral-ocr-doodle-app

./: .gitignore  README.md  dev-deploy.sh  main.py  ocr_output.md  pyproject.toml  quickstart.ipynb  requirements.txt  run.sh
app/: main.py  streamlit_app.py
tests/: conftest.py
tests/unit/test_app/: test_main.py  test_streamlit_app.py
