[project]
name = "mistral-streamlitapp"
version = "0.1.0"
description = "App that takes a pdf loaded from a streamlit terminal then returns the markdown content of the pdf"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mistralai>=1.6.0",
    "pandas>=2.2.3",
]
