[project]
name = "mistral-streamlitapp"
version = "0.1.0"
description = "App that takes a pdf loaded from a streamlit terminal then returns the markdown content of the pdf"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mistralai>=1.6.0",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
    "validators>=0.34.0",
]
